@@ -3,35 +3,35 @@ abstract: 'Interface to the DeutscheBahn online'
 author:
   - 'Copyright (C) 2011 by Daniel Friesel E<lt>derf@finalrewind.orgE<gt>'
 build_requires:
-  File::Slurp: 0
-  Test::Compile: 0
-  Test::More: 0
-  Test::Pod: 0
+  File::Slurp: '0'
+  Test::Compile: '0'
+  Test::More: '0'
+  Test::Pod: '0'
 configure_requires:
-  Module::Build: 0.40
+  Module::Build: '0.4'
 dynamic_config: 1
-generated_by: 'Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.421, CPAN::Meta::Converter version 2.142690'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Travel-Status-DE-DeutscheBahn
 provides:
   Travel::Status::DE::DeutscheBahn:
     file: lib/Travel/Status/DE/DeutscheBahn.pm
-    version: 1.02
+    version: '1.03'
   Travel::Status::DE::DeutscheBahn::Result:
     file: lib/Travel/Status/DE/DeutscheBahn/Result.pm
-    version: 1.02
+    version: '1.03'
 requires:
-  Carp: 0
-  Class::Accessor: 0.16
-  Getopt::Long: 0
-  LWP::UserAgent: 0
-  List::Util: 0
-  POSIX: 0
-  XML::LibXML: 1.70
+  Carp: '0'
+  Class::Accessor: '0.16'
+  Getopt::Long: '0'
+  LWP::UserAgent: '0'
+  List::Util: '0'
+  POSIX: '0'
+  XML::LibXML: '1.70'
   perl: v5.10.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 1.02
+version: '1.03'
