@@ -12,37 +12,37 @@ the distribution may already have been compromised, and you should
 not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
-SHA1 8146267b09af8157aa67eb220b0b6ad3d5c61303 Build.PL
+SHA1 398226aaac286364045771bd05c2303ba7d5253f Build.PL
 SHA1 d0f2060d740ce428f14c47b7f9cc2c65bf66cd7b COPYING
-SHA1 bf2584f665ac9235782e56deebf8a6b27a1c28fa Changelog
+SHA1 b48fd2139c760bfa57989e3778ee0b3d17b12723 Changelog
 SHA1 32288fcf786d74987d6df5867f8224f7e6f9e3b2 MANIFEST
-SHA1 b604c59ef9b6088f4d70b66609420e4842f8e035 META.json
-SHA1 7587268b9e0f71a0f67eafde56eb6ea9b5499538 META.yml
+SHA1 26e0cef62c60022b502ad0cf82e4d40f75f1e5d9 META.json
+SHA1 a3c40173645b25ccab3a8d49dd8ca366f2f920b6 META.yml
 SHA1 26a3730f54afbb6c4c40af6de16da4561ce93bc6 README
-SHA1 bda9b47df14b5ce189ccea9e39000bcb659f98c7 bin/db-ris
-SHA1 6ef92982b696c17c3017c0a67060093993352680 lib/Travel/Status/DE/DeutscheBahn.pm
-SHA1 01169cd442d0a32ac42b6d2d34b488759322e0bb lib/Travel/Status/DE/DeutscheBahn/Result.pm
+SHA1 5d4dfe2982c9669982ed70e4e75ccc391b2edcc0 bin/db-ris
+SHA1 c34cdc4ecbcc3fb7adc93ccabdd958d3d196dd45 lib/Travel/Status/DE/DeutscheBahn.pm
+SHA1 4d48896ad948ccd3cc59f78cc74d1f5b1b1eb8a0 lib/Travel/Status/DE/DeutscheBahn/Result.pm
 SHA1 6cfaebdb4d57688b8ac50f3e840a99a48c15457b t/00-compile-pm.t
 SHA1 3adfc7da6082f15051da7fbda884723388738b61 t/01-compile-pl.t
 SHA1 fd251ffc56ca6e52020c906b61158f78b035679d t/10-pod-coverage.t
 SHA1 ec8aa199103cc695b0a5204ebf88840f94dbd002 t/20-db.t
-SHA1 d406786e99f134d2dcf15a220370ca17693c5a93 t/in/essen.html
+SHA1 4fa723f81a7e50bcc81df4ba9106bfce7c8692cc t/in/essen.html
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.14 (GNU/Linux)
+Version: GnuPG v1
 
-iQIcBAEBCAAGBQJSN4M2AAoJEBANW/tRZuAFjAAQALAjKEXolBVUPcQCoIaflvx6
-jTIQnUBKJOG9kU9E9RImK/v8dNNt2q2YYQsJ8g8jGkFLLvJ+wq59IWjmLwkZmmdS
-VTkoZtrTIg19feNrrMFReSAAZkcPwcPR7JKU+N567GvHo2gK2Z2pTxFn1zBhm4Wm
-0VcN8duG8sjyM8/CVatW7ndqqrY8lk74IpbFh3WmgUNpBtWsgIKGS0AIX6rvhbyk
-2G/oW56IVy4BGJg4f3Gb6apIradixABwy/avj+9tAt1sexqMZc1JljSc/rHYs3w6
-1PyAJquv4AR2nvKeMVZXPqGhn2y1tjW9T5CDtofplXdSV4B9uey1yNKgzyHQ3ueR
-KXESDRMzykeagV6MaFcVK1o8E2q9RGgbZnrgOYiiHRdzhuzPfPOIC2xKfym1SFlP
-yivxLaBgVuEKuzBqtHixQRo5J5HsRlgEkcad7i1hJYhK1U6LoiofNxmTAfWxl2St
-zwo+iTS6tpOB7uNnw97hY3+xk6Qk131aTEZSdu4braSVWnlV18rrOSsSaZZeO+Dh
-Lz6l2K3Y0NTPA3vNpwNcd53Q/+ecK7ZImLaumW+1D6kVCfAuVuv+ROK2t83IJHvN
-CJcrHWY3WMBf6XNGR69SIrGeLx7DhiYWHLWRHH/WZdFq4DzZP21OEOwhsOyf5CXV
-G4sxORJ8YlGTtskdD9fB
-=gJbC
+iQIcBAEBCgAGBQJURpD/AAoJEBANW/tRZuAFxfQP/0ir4hJDikSU/soR1omNB0Lr
+aWfY4wFYytuAsWnyPkoLvyrlzgEyB64VUcPlKXEU7M98Upqjwl6RNsskuz/f1CxQ
+/5UWHENRPsc1oSKRIJKa8wRGAe2Oivi+4Jr2u+VnMYB0B7yVXbqpfmXpYNOnwCEZ
+/HVoT5Wph1UaIpdV+1l5EF+TKYYyDSTb9dTmqahhAEfT++JXr7k+sIbRs0YbXLTv
+JOHD+PI8MNBwGy514t5/R/Q5LbSGldm+luEvl7fDl5kp/YiqqdpUFZssqTbwxm7/
+/Teal/o2QPFfh7AscG4srlsXFHoMf4Gxh5zqU1Y28pZO42XjwYrJXgmusY1uerW/
+JqZpbF+L34DRXhCqWdLbRuVmPmWitecJH+K+aerz8QZMc48XPPfJyN6NZh+qh1T6
+bHYE38rAKTN0Vxw2gse1yr5l27XZPmw2MnfIdLVA8XI6VN8HLWWt6lmFYJBespWH
+iuQyZzmJTlcKDDPgAyoi3PjfYzYRxM9ItLJnWDU8roHEY9q0fdQwxGi1oc/7BhAo
+6gBn/E+hRbOveN5llcMJN+VHPjI5RoCULOw4h9sAVsZFuSrxq2L+GKM5ATbkhR5b
+/NSnrSLfkUlHDoWJJj/VwbQK2CKxdKYo1UlfGUOxbbEaez170sploicAVK2scLok
+8W8iR5T0oa1TVCqT6aR1
+=Mx6I
 -----END PGP SIGNATURE-----
