@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.010;
 
-our $VERSION = '1.02';
+our $VERSION = '1.03';
 
 use Getopt::Long qw(:config no_ignore_case);
 use List::Util qw(first max);
@@ -147,7 +147,7 @@ B<db-ris> [B<-a>] [B<-d> I<date>] [B<-L>] [B<-m> I<motlist>] [B<-t> I<time>]
 
 =head1 VERSION
 
-version 1.02
+version 1.03
 
 =head1 DESCRIPTION
 
