@@ -1293,7 +1293,7 @@ M&#252;nster(Westf)Hbf
 <strong>6</strong><br />
 </td>
 <td class="ris">
-<span><span style="color:#f00;">ca.&nbsp;15&nbsp;Minuten&nbsp;sp&#228;ter</span></span>,<br/><span class="red">Grund: Stellwerksst&#246;rung /-ausfall</span></td>
+<span><span style="color:#f00;">ca. +15</span></span>,<br/><span class="red">Grund: Stellwerksst&#246;rung /-ausfall</span></td>
 </tr>
 <tr>
 <td class="time">19:41</td>
@@ -1906,7 +1906,7 @@ Hamburg-Altona
 <strong>4</strong><br />
 </td>
 <td class="ris">
-<span><span style="color:#f00;">ca.&nbsp;15&nbsp;Minuten&nbsp;sp&#228;ter</span></span>,<br/><span class="red">Grund: Stellwerksst&#246;rung /-ausfall</span></td>
+<span><span style="color:#f00;">ca. +15</span></span>,<br/><span class="red">Grund: Stellwerksst&#246;rung /-ausfall</span></td>
 </tr>
 <tr>
 <td class="time">20:00</td>
